Fix label text wrapping

--- a/packages/cx-theme-material/src/index.scss
+++ b/packages/cx-theme-material/src/index.scss
@@ -151,6 +151,7 @@ $form-list: (
       color: $cx-default-input-placeholder-color;
       font-size: $cx-default-input-font-size;
       pointer-events: none;
+      white-space: nowrap; 
    }
 
    &.#{$state}focus,
